--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 title: My Resume
-url: 'http://webjeda.com'
+url: 'https://jviera.github.io'
 baseurl: '/online-cv' #change it according to your repository name
 
 
@@ -13,17 +13,17 @@ baseurl: '/online-cv' #change it according to your repository name
 
 
 #Profile information
-name: Alan Doe
-tagline: Full Stack Developer
+name: José Viera
+tagline: Programador Java
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
-email: hello@webjeda.com
-phone: 012 345 6789
-website: blog.webjeda.com #do not add http://
-linkedin: alandoe
-github: sharu725
-twitter: '@webjeda'
+email: jviera.dev@gmail.com
+phone: 722 290 72 81
+website: jviera.github.io #do not add http://
+linkedin: josé-barbarito-viera-rebolledo-905b0850
+github: jviera
+twitter: '@jvieradev'
 
 
 # Tracker
