--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 
-title: My Resume
+title: WEB Personal
 url: 'https://jviera.github.io'
 baseurl: '/jviera.github.io' #change it according to your repository name
 
 
 # Enable one of these styles by removing #. Style will be applied only after restarting the build or serve.
 #style: styles-2
-style: styles-3
+#style: styles-3
 #style: styles-4
 #style: styles-5
 #style: styles-6
