--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: WEB Personal
+title: José Viera
 url: 'https://jviera.github.io'
 baseurl: '/jviera.github.io' #change it according to your repository name
 
