--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and pro
 
 #sidebar links
 email: jviera.dev@gmail.com
-phone: 722 290 72 81
+phone: XXX XXX XX XX
 website: jviera.github.io #do not add http://
 linkedin: josé-barbarito-viera-rebolledo-905b0850
 github: jviera
